--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -7,6 +7,10 @@ body{
     font-family: var(--font-family-base);
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--heading-font-family);
+}
+
 a{
     color: var(--text-color);
 }
@@ -23,10 +27,6 @@ a{
     color: var(--color-primary);
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--heading-font-family);
-}
-
 :root{
     --color-primary: #d73953;
     --color-black: #090909;
@@ -34,6 +34,6 @@ h1, h2, h3, h4, h5, h6 {
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black)
-    --font-family-base: Helvetica Neue, Helvetica, Arial, sans-serif;
-    --font-family-title: Helvetica Neue, Helvetica, Arial, sans-serif;
+    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
